{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 83,
  "lineage": "752d73f6-95f1-e859-4fe2-495ec4bf9bdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_ejercicio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0706a46e3e90ca5b7",
            "arn": "arn:aws:ec2:us-east-1:381491991977:elastic-ip/eipalloc-0706a46e3e90ca5b7",
            "associate_with_private_ip": "172.16.10.4",
            "association_id": "eipassoc-04db10d96ccb4c28d",
            "domain": "vpc",
            "id": "eipalloc-0706a46e3e90ca5b7",
            "instance": "i-0ef3fcb1aa451fab3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b583486754a52e66",
            "private_dns": "ip-172-16-10-4.ec2.internal",
            "private_ip": "172.16.10.4",
            "public_dns": "ec2-34-232-179-156.compute-1.amazonaws.com",
            "public_ip": "34.232.179.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ejercicio"
            },
            "tags_all": {
              "Name": "eip_ejercicio"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.server_wordpress",
            "aws_internet_gateway.int_gw_vpc_proy",
            "aws_security_group.sg_proyecto",
            "aws_subnet.subnet_vpc_proyecto",
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:381491991977:instance/i-0ef3fcb1aa451fab3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef3fcb1aa451fab3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roberKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b583486754a52e66",
            "private_dns": "ip-172-16-10-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03213a8225a025b3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ab5e908dda1aaab2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0032aebc477315a38",
            "tags": {
              "Name": "server_wordpress"
            },
            "tags_all": {
              "Name": "server_wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab5e908dda1aaab2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_proyecto",
            "aws_subnet.subnet_vpc_proyecto",
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "int_gw_vpc_proy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:internet-gateway/igw-06e8f24999d1faa46",
            "id": "igw-06e8f24999d1faa46",
            "owner_id": "381491991977",
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "dependencies": [
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_subnet_proy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:route-table/rtb-00b63c6a2934e7e37",
            "id": "rtb-00b63c6a2934e7e37",
            "owner_id": "381491991977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e8f24999d1faa46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_subnet_proy"
            },
            "tags_all": {
              "Name": "rtb_subnet_proy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.int_gw_vpc_proy",
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_aso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bed9e2ceafd55d5",
            "route_table_id": "rtb-00b63c6a2934e7e37",
            "subnet_id": "subnet-0032aebc477315a38"
          },
          "dependencies": [
            "aws_internet_gateway.int_gw_vpc_proy",
            "aws_route_table.rtb_subnet_proy",
            "aws_subnet.subnet_vpc_proyecto",
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:security-group/sg-0ab5e908dda1aaab2",
            "description": "Allow traffic HTTP SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab5e908dda1aaab2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_default",
            "name_prefix": "",
            "owner_id": "381491991977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all"
            },
            "tags_all": {
              "Name": "Allow all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:security-group/sg-0f395ba17442ac970",
            "description": "Allow traffic mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f395ba17442ac970",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_mysql",
            "name_prefix": "",
            "owner_id": "381491991977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all"
            },
            "tags_all": {
              "Name": "Allow all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:subnet/subnet-0032aebc477315a38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032aebc477315a38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491991977",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_vpc_proyecto"
            },
            "tags_all": {
              "Name": "subnet_vpc_proyecto"
            },
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "dependencies": [
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:subnet/subnet-04e1599bfa8c80143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e1599bfa8c80143",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491991977",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_vpc_rds"
            },
            "tags_all": {
              "Name": "subnet_vpc_rds"
            },
            "vpc_id": "vpc-0522e9ea3012493e2"
          },
          "dependencies": [
            "aws_vpc.vpc_ec2_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ec2_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491991977:vpc/vpc-0522e9ea3012493e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0141265a164553b6c",
            "default_route_table_id": "rtb-03e16fbb8cf9a866c",
            "default_security_group_id": "sg-0b81b6c2a210bddd6",
            "dhcp_options_id": "dopt-0c75cba7f1747360c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0522e9ea3012493e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e16fbb8cf9a866c",
            "owner_id": "381491991977",
            "tags": {
              "Name": "vpc_ec2_wordpress"
            },
            "tags_all": {
              "Name": "vpc_ec2_wordpress"
            }
          }
        }
      ]
    }
  ]
}